<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        tools:context=".screens.authentication.LoginFragment">

        <ImageView
            android:id="@+id/image_view_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_xx_large"
            android:contentDescription="@string/app_logo_content_description"
            android:src="@drawable/ic_game_pad"
            app:layout_constraintBottom_toTopOf="@id/constraint_layout_form_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/tart_orange" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_form_container"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_form_background"
            android:padding="@dimen/padding_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_sign_up"
                style="@style/HeadingLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                style="@style/EmailInputLayout"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:errorTextColor="@color/tart_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_sign_up">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    style="@style/EmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                style="@style/PasswordInputLayout"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:errorTextColor="@color/tart_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    style="@style/PasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_repeat_password"
                style="@style/PasswordInputLayout"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/repeat_password"
                app:errorTextColor="@color/tart_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
                app:placeholderText="@string/repeat_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_repeat_password"
                    style="@style/PasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                style="@style/BaseButton"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_repeat_password" />

            <TextView
                android:id="@+id/text_view_have_account"
                style="@style/BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:letterSpacing="0.02"
                android:text="@string/have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
